overlays/static-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-files-service
  namespace: static-files
  metallb.io/address-pool: ip-address-pool
spec:
  selector:
    app: static-files
  ports:
  - port: 80
    targetPort: 80
