overlays/static-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-files-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: files.cbrz.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-files-service
            port:
              number: 80
